Test virtual_disk module on 9.1
Also test replication factor is exactly as expected.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/virtual_disk/tasks/main.yml
+++ b/tests/integration/targets/virtual_disk/tasks/main.yml
@@ -5,269 +5,11 @@
     SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
   vars:
-    expected_virtual_disk_replication_factors:
-      - 1  # (virtual) single node systems have no replication
-      - 2  # real 3 node systems
+    image_filename: "ci-test-virtual-disk-1.qcow2"
+    expected_virtual_disk_replication_factor: "{{ sc_config[sc_host].features.virtual_disk.replication_factor }}"
 
-# ----------------------------------Setup------------------------------------------------------------------------
   block:
-    - name: Delete virtual disk files if exist
-      scale_computing.hypercore.virtual_disk:
-        state: absent
-        name: "{{ item }}"
-      loop:
-        - xlab-ci-test-VD.qcow2
-        - xlab-ci-test-VD.vmdk
-        # half-uploaded VD has "uploading-" magic prefix.
-        - uploading-xlab-ci-test-VD.qcow2
-        - uploading-xlab-ci-test-VD.vmdk
-
-    - name: Assert cleanup was successful
-      scale_computing.hypercore.virtual_disk_info:
-        name: "{{ virtual_disk_name }}"
-      register: virtual_disk_file
-      loop:
-        - xlab-ci-test-VD.qcow2
-        - xlab-ci-test-VD.vmdk
-      loop_control:
-        loop_var: virtual_disk_name
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.results.0.records|length==0
-          - virtual_disk_file.results.1.records|length==0
-
-    - name: Generate virtual disk file qcow2
-      ansible.builtin.shell:
-        cmd: qemu-img create -f qcow2 xlab-ci-test-VD.qcow2 10M
-      register: generated_img
-
-    - name: Generate virtual disk file vmdk
-      ansible.builtin.shell:
-        cmd: qemu-img create -f vmdk xlab-ci-test-VD.vmdk 10M
-      register: generated_img
-
-# ----------------------------------Job------------------------------------------------------------------------
-    - name: Upload virtual disk file .qcow2
-      scale_computing.hypercore.virtual_disk:
-        state: present
-        source: xlab-ci-test-VD.qcow2
-        name: xlab-ci-test-VD.qcow2
-      register: uploaded_virtual_disk
-    - ansible.builtin.assert:
-        that:
-          - uploaded_virtual_disk is succeeded
-          - uploaded_virtual_disk is changed
-          - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
-          - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.qcow2"
-          - uploaded_virtual_disk.record.block_size == 1048576
-          - uploaded_virtual_disk.record.replication_factor in expected_virtual_disk_replication_factors
-          - uploaded_virtual_disk.record.size == 10485760
-
-    - name: Assert that virtual disk .qcow2 exist on cluster
-      scale_computing.hypercore.virtual_disk_info:
-        name: xlab-ci-test-VD.qcow2
-      register: virtual_disk_file
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.records | length == 1
-          - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
-          - virtual_disk_file.records.0.name == "xlab-ci-test-VD.qcow2"
-          - virtual_disk_file.records.0.block_size == 1048576
-          - virtual_disk_file.records.0.replication_factor in expected_virtual_disk_replication_factors
-          - virtual_disk_file.records.0.size == 10485760
-          - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
-
-# ----------------------------------Idempotence check----------------------------------------------------------
-    - name: Upload virtual disk file .qcow2 - IDEMPOTENCE
-      scale_computing.hypercore.virtual_disk:
-        state: present
-        source: xlab-ci-test-VD.qcow2
-        name: xlab-ci-test-VD.qcow2
-      register: uploaded_virtual_disk
-    - ansible.builtin.assert:
-        that:
-          - uploaded_virtual_disk is succeeded
-          - uploaded_virtual_disk is not changed
-          - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
-          - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.qcow2"
-          - uploaded_virtual_disk.record.block_size == 1048576
-          - uploaded_virtual_disk.record.replication_factor in expected_virtual_disk_replication_factors
-          - uploaded_virtual_disk.record.size == 10485760
-          - uploaded_virtual_disk.diff.before == uploaded_virtual_disk.diff.after
-
-    - name: Assert that virtual disk .qcow2 exist on cluster - IDEMPOTENCE
-      scale_computing.hypercore.virtual_disk_info:
-        name: xlab-ci-test-VD.qcow2
-      register: virtual_disk_file
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.records | length == 1
-          - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
-          - virtual_disk_file.records.0.name == "xlab-ci-test-VD.qcow2"
-          - virtual_disk_file.records.0.block_size == 1048576
-          - virtual_disk_file.records.0.replication_factor in expected_virtual_disk_replication_factors
-          - virtual_disk_file.records.0.size == 10485760
-          - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
-
-# ----------------------------------Job------------------------------------------------------------------------
-    - name: Upload virtual disk file .vmdk
-      scale_computing.hypercore.virtual_disk:
-        state: present
-        source: xlab-ci-test-VD.vmdk
-        name: xlab-ci-test-VD.vmdk
-      register: uploaded_virtual_disk
-    - ansible.builtin.assert:
-        that:
-          - uploaded_virtual_disk is succeeded
-          - uploaded_virtual_disk is changed
-          - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
-          - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.vmdk"
-          - uploaded_virtual_disk.record.block_size == 1048576
-          - uploaded_virtual_disk.record.replication_factor in expected_virtual_disk_replication_factors
-          - uploaded_virtual_disk.record.size == 10485760
-
-    - name: Assert that virtual disk .vmdk exist on cluster
-      scale_computing.hypercore.virtual_disk_info:
-        name: xlab-ci-test-VD.vmdk
-      register: virtual_disk_file
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.records | length == 1
-          - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
-          - virtual_disk_file.records.0.name == "xlab-ci-test-VD.vmdk"
-          - virtual_disk_file.records.0.block_size == 1048576
-          - virtual_disk_file.records.0.replication_factor in expected_virtual_disk_replication_factors
-          - virtual_disk_file.records.0.size == 10485760
-          - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
-
-# ----------------------------------Idempotence check----------------------------------------------------------
-    - name: Upload virtual disk file .vmdk - IDEMPOTENCE
-      scale_computing.hypercore.virtual_disk:
-        state: present
-        source: xlab-ci-test-VD.vmdk
-        name: xlab-ci-test-VD.vmdk
-      register: uploaded_virtual_disk
-    - ansible.builtin.assert:
-        that:
-          - uploaded_virtual_disk is succeeded
-          - uploaded_virtual_disk is not changed
-          - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
-          - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.vmdk"
-          - uploaded_virtual_disk.record.block_size == 1048576
-          - uploaded_virtual_disk.record.replication_factor in expected_virtual_disk_replication_factors
-          - uploaded_virtual_disk.record.size == 10485760
-          - uploaded_virtual_disk.diff.before == uploaded_virtual_disk.diff.after
-
-    - name: Assert that virtual disk .vmdk exist on cluster - IDEMPOTENCE
-      scale_computing.hypercore.virtual_disk_info:
-        name: xlab-ci-test-VD.vmdk
-      register: virtual_disk_file
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.records | length == 1
-          - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
-          - virtual_disk_file.records.0.name == "xlab-ci-test-VD.vmdk"
-          - virtual_disk_file.records.0.block_size == 1048576
-          - virtual_disk_file.records.0.replication_factor in expected_virtual_disk_replication_factors
-          - virtual_disk_file.records.0.size == 10485760
-          - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
-
-# ----------------------------------Job------------------------------------------------------------------------
-    - name: Delete virtual disk file .qcow2
-      scale_computing.hypercore.virtual_disk:
-        state: absent
-        name: xlab-ci-test-VD.qcow2
-      register: deleted_virtual_disk
-    - ansible.builtin.assert:
-        that:
-          - deleted_virtual_disk is succeeded
-          - deleted_virtual_disk is changed
-          - deleted_virtual_disk.diff.before.name == "xlab-ci-test-VD.qcow2"
-
-    - name: Assert that virtual disk .qcow2 is deleted
-      scale_computing.hypercore.virtual_disk_info:
-        name: xlab-ci-test-VD.qcow2
-      register: virtual_disk_file
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.records | length == 0
-
-# ----------------------------------Idempotence check----------------------------------------------------------
-    - name: Delete virtual disk file .qcow2 - IDEMPOTENCE
-      scale_computing.hypercore.virtual_disk:
-        state: absent
-        name: xlab-ci-test-VD.qcow2
-      register: deleted_virtual_disk
-    - ansible.builtin.assert:
-        that:
-          - deleted_virtual_disk is succeeded
-          - deleted_virtual_disk is not changed
-          - deleted_virtual_disk.diff.before == None
-          - deleted_virtual_disk.diff.before == deleted_virtual_disk.diff.after
-
-    - name: Assert that virtual disk .qcow2 is deleted - IDEMPOTENCE
-      scale_computing.hypercore.virtual_disk_info:
-        name: xlab-ci-test-VD.qcow2
-      register: virtual_disk_file
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.records | length == 0
-
-# ----------------------------------Job------------------------------------------------------------------------
-    - name: Delete virtual disk file .vmdk
-      scale_computing.hypercore.virtual_disk:
-        state: absent
-        name: xlab-ci-test-VD.vmdk
-      register: deleted_virtual_disk
-    - ansible.builtin.assert:
-        that:
-          - deleted_virtual_disk is succeeded
-          - deleted_virtual_disk is changed
-          - deleted_virtual_disk.diff.before.name == "xlab-ci-test-VD.vmdk"
-
-    - name: Assert that virtual disk .vmdk is deleted
-      scale_computing.hypercore.virtual_disk_info:
-        name: xlab-ci-test-VD.vmdk
-      register: virtual_disk_file
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.records | length == 0
-
-# ----------------------------------Idempotence check----------------------------------------------------------
-    - name: Delete virtual disk file .vmdk - IDEMPOTENCE
-      scale_computing.hypercore.virtual_disk:
-        state: absent
-        name: xlab-ci-test-VD.vmdk
-      register: deleted_virtual_disk
-    - ansible.builtin.assert:
-        that:
-          - deleted_virtual_disk is succeeded
-          - deleted_virtual_disk is not changed
-          - deleted_virtual_disk.diff.before == None
-          - deleted_virtual_disk.diff.before == deleted_virtual_disk.diff.after
-
-    - name: Assert that virtual disk .vmdk is deleted - IDEMPOTENCE
-      scale_computing.hypercore.virtual_disk_info:
-        name: xlab-ci-test-VD.vmdk
-      register: virtual_disk_file
-    - ansible.builtin.assert:
-        that:
-          - virtual_disk_file is succeeded
-          - virtual_disk_file is not changed
-          - virtual_disk_file.records | length == 0
+    - include_tasks: 01_supported.yml
+      when: sc_config[sc_host].features.virtual_disk.is_supported
+    - include_tasks: 02_not_supported.yml
+      when: not sc_config[sc_host].features.virtual_disk.is_supported
