Example should work also if no update is available
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/version_update_info.yml
+++ b/examples/version_update_info.yml
@@ -11,4 +11,8 @@
 
     - name: Show update with count, lowest and highest version
       ansible.builtin.debug:
-        msg: Host has {{ result.records | length }} updates available, lowest is {{ result.next.uuid }}, highest is {{ result.latest.uuid }}
+        msg: >-
+          Host has {{ result.records | length }} updates available.
+          All available updates: {{ result.records | map(attribute='uuid')}}.
+          Lowest update is "{{ result.next.uuid | default('') }}".
+          Highest update is "{{ result.latest.uuid | default('') }}".
