Add next and latest to version_update_info output (#189)
Add next and latest to version_update_info output

The list of all updated is now sorted in ascending order. 
An example was added.

--- a/tests/integration/targets/version_update_info/tasks/main.yml
+++ b/tests/integration/targets/version_update_info/tasks/main.yml
@@ -11,5 +11,7 @@
       register: updates
     - ansible.builtin.assert:
         that:
-          - updates.records != []
           - updates.records[0].keys() | sort == ['build_id', 'change_log', 'description', 'major_version', 'minor_version', 'revision', 'timestamp', 'uuid']
+          - updates.next.keys() | sort == ['build_id', 'change_log', 'description', 'major_version', 'minor_version', 'revision', 'timestamp', 'uuid']
+          - updates.latest.keys() | sort == ['build_id', 'change_log', 'description', 'major_version', 'minor_version', 'revision', 'timestamp', 'uuid']
+      when: updates.records != []
