--- a/tests/integration/targets/vm_replication_info/tasks/03_recreate_source_vms.yml
+++ b/tests/integration/targets/vm_replication_info/tasks/03_recreate_source_vms.yml
@@ -1,39 +1,4 @@
-# Create test VMs, no replication configured.
-# Test output for VM with no replication.
-
-# -------------------------------------------------------------------------
-# Test vm_replication_info for not present VM
-- name: Get replication info for one VM
-  scale_computing.hypercore.vm_replication_info:
-    vm_name: XLAB-vm_replication_info_CI_test-bf238ai6d2
-  register: replication_info
-  ignore_errors: true
-- ansible.builtin.assert:
-    that:
-      - replication_info is failed
-      - replication_info is not changed
-
-# -------------------------------------------------------------------------
-# Cleanup replicated VMs on dest cluster.
-# The vm module cannot be used - we can have old replicas still present,
-# so the VM name might not be unique on dest cluster.
-- name: List old replicated VMs on dest cluster
-  scale_computing.hypercore.vm_info:
-    cluster_instance: "{{ dest_cluster_instance }}"
-    vm_name: "{{ vm_name }}"
-  register: dest_old_replicated_vms
-  loop: "{{ vm_names }}"
-  loop_control:
-    loop_var: vm_name
-
-- name: Remove old replicated VMs on dest cluster
-  scale_computing.hypercore.api:
-    cluster_instance: "{{ dest_cluster_instance }}"
-    action: delete
-    endpoint: /rest/v1/VirDomain/{{ vm.uuid }}
-  loop: "{{ dest_old_replicated_vms.results.0.records + dest_old_replicated_vms.results.1.records }}"
-  loop_control:
-    loop_var: vm
+# Remove and recreate test VMs on source cluster.
 
 # -------------------------------------------------------------------------
 # Create 1st VM
@@ -106,17 +71,6 @@
 - name: Wait for the VM2 to be created
   scale_computing.hypercore.task_wait:
     task_tag: "{{ vm2_created.record }}"
-
-# -------------------------------------------------------------------------
-- name: Get available cluster connection
-  scale_computing.hypercore.api:
-    action: get
-    endpoint: /rest/v1/RemoteClusterConnection
-  register: cluster_connection_info
-- ansible.builtin.assert:
-    that:
-      - cluster_connection_info is succeeded
-      - cluster_connection_info.record | length > 0
 
 # -------------------------------------------------------------------------
 # Test vm_replication_info for VM without replication
