Test vm_replication on real cluster
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -197,6 +197,13 @@ jobs:
         sc_host:
           - https://10.5.11.200
           - https://10.5.11.201
+        include:
+          - ansible: 2.13.0
+            sc_host: https://10.5.11.50
+            test_name: vm_replication
+          - ansible: 2.13.0
+            sc_host: https://10.5.11.50
+            test_name: vm_replication_info
     steps:
       - name: Checkout
         uses: actions/checkout@v3
