--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -23,10 +23,10 @@ on:
           List integration tests to exclude.
           Use "*" to exclude all tests.
           Use regex like 'node|^git_issue|^dns_config$' to exclude only a subset.
-        default: "^dns_config$|^cluster_shutdown$|^version_update$|^oidc_config$|^smtp$|^role_cluster_config$|^version_update_single_node$"
+        default: "^dns_config$|^cluster_shutdown$|^version_update$|^oidc_config$|^smtp$|^role_cluster_config$|^role_version_update_single_node$"
 env:
   INTEG_TESTS_INCLUDE_SCHEDULE: "*"
-  INTEG_TESTS_EXCLUDE_SCHEDULE: "^dns_config$|^cluster_shutdown$|^version_update$|^oidc_config$|^smtp$|^role_cluster_config$|^version_update_single_node$"
+  INTEG_TESTS_EXCLUDE_SCHEDULE: "^dns_config$|^cluster_shutdown$|^version_update$|^oidc_config$|^smtp$|^role_cluster_config$|^role_version_update_single_node$"
   # ansible-test needs special directory structure.
   # WORKDIR is a subdir of GITHUB_WORKSPACE
   WORKDIR: work-dir/ansible_collections/scale_computing/hypercore
@@ -62,9 +62,7 @@ jobs:
       - run: ansible-galaxy collection list
       - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
         with:
-          ci_config_all: ${{ vars.CI_CONFIG_HC_IP50 }}
           sc_host: ${{ matrix.sc_host }}
-          sc_username_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_USERNAME }}
           sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
           smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
@@ -157,9 +155,7 @@ jobs:
       # ${{ env.WORKDIR }} cannot be used
       - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
         with:
-          ci_config_all: ${{ vars.CI_CONFIG_HC_IP50 }}
           sc_host: https://10.5.11.200
-          sc_username_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_USERNAME }}
           sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
           smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
@@ -190,19 +186,29 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ansible: [2.13.0]
+        # ansible: [2.13.0]
         # python: [3.11]
         # test_name: [user_info]
         test_name: ${{ fromJson(needs.integ-matrix.outputs.matrix) }}
         sc_host:
           - https://10.5.11.200
           - https://10.5.11.201
+        include:
+          - sc_host: https://10.5.11.50
+            test_name: vm_replication
+          - sc_host: https://10.5.11.50
+            test_name: vm_replication_info
+        exclude:
+          - sc_host: https://10.5.11.200
+            test_name: vm_replication
+          - sc_host: https://10.5.11.201
+            test_name: vm_replication
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           path: ${{ env.WORKDIR }}
-      - run: pip install ansible-core~=${{ matrix.ansible }}
+      - run: pip install ansible-core~=2.13.0
       # We have ansible.cfg "for testing" in git repo
       # (it is excluded in galaxy.yml, so it is not part of collection artifact)
       # But it does affect ansible-galaxy and ansible-test commands.
@@ -211,9 +217,7 @@ jobs:
       # ${{ env.WORKDIR }} cannot be used
       - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
         with:
-          ci_config_all: ${{ vars.CI_CONFIG_HC_IP50 }}
           sc_host: ${{ matrix.sc_host }}
-          sc_username_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_USERNAME }}
           sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
           smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
@@ -240,9 +244,7 @@ jobs:
       # ${{ env.WORKDIR }} cannot be used
       - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
         with:
-          ci_config_all: ${{ vars.CI_CONFIG_HC_IP50 }}
           sc_host: https://10.5.11.200
-          sc_username_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_USERNAME }}
           sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
           smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
@@ -266,9 +268,7 @@ jobs:
       # ${{ env.WORKDIR }} cannot be used
       - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
         with:
-          ci_config_all: ${{ vars.CI_CONFIG_HC_IP50 }}
           sc_host: https://10.5.11.200
-          sc_username_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_USERNAME }}
           sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
           smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
