CI try to resend test email if it fails
job on 200 VSNS:
https://github.com/ScaleComputing/HyperCoreAnsibleCollection/actions/runs/4625947983/jobs/8182206970#step:8:182
job on 201 VSNS:
https://github.com/ScaleComputing/HyperCoreAnsibleCollection/actions/runs/4625947983/jobs/8182207045#step:8:182

On 201 we were not able to send email.
A guess - we are using a real external SMTP server, and sometimes it
might reject out email (maybe it looks like spam).

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/email_alert/tasks/02_email_alert.yml
+++ b/tests/integration/targets/email_alert/tasks/02_email_alert.yml
@@ -119,18 +119,30 @@
             ['alert_tag_uuid', 'email', 'latest_task_tag',
             'resend_delay', 'silent_period', 'uuid']
 
-
+    # Sending email can fail.
+    # We are using external SMTP server, and email address is from external domain.
+    # Either of two might not work.
+    # Try to resend after delay.
+    # Alternatives:
+    # - Set up a dedicated SMTP server, and use it during test.
+    #   It will have IP, but no DNS domain.
+    # - Use a temp email address from some public service (like https://temp-mail.org).
+    #   Again external service.
     - name: Send test email to an existing Email Alert Recipient
       scale_computing.hypercore.email_alert:
         email: "{{ new_email }}"
         state: test
       register: result
+      retries: 5
+      delay: 10
+      until: result is succeeded
     - scale_computing.hypercore.email_alert_info:
       register: info
     - ansible.builtin.debug:
         msg: "{{ result }}"
     - ansible.builtin.assert:
         that:
+          - result is succeeded
           - result.changed == False
           - result.diff.before == result.diff.after
           - info.records|length == 1|int
