--- a/tests/integration/targets/version_update_status_info/tasks/main.yml
+++ b/tests/integration/targets/version_update_status_info/tasks/main.yml
@@ -9,7 +9,14 @@
     - name: Get status of the latest update applied
       scale_computing.hypercore.version_update_status_info:
       register: update_status
+
     - ansible.builtin.assert:
         that:
           - update_status.record != []
           - update_status.record.keys() | sort == ['from_build', 'percent', 'prepare_status', 'to_build', 'to_version', 'update_status', 'update_status_details', 'usernotes']
+      when: sc_config[sc_host].features.version_update.old_update_status_present
+
+    - ansible.builtin.assert:
+        that:
+          - update_status.record == None
+      when: not sc_config[sc_host].features.version_update.old_update_status_present
