CI Use dedicated NTP servers
Failed job
https://github.com/ScaleComputing/HyperCoreAnsibleCollection/actions/runs/4625947983/jobs/8182201867#step:8:120

Hopefully this will lessen load on pool.ntp.org, so we can continue
to use it when not testing.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/role_cluster_config/tasks/main.yml
+++ b/tests/integration/targets/role_cluster_config/tasks/main.yml
@@ -29,7 +29,7 @@
         # certificate: plain_text_from_x509
         config_url: https://login.microsoftonline.com/76d4c62a-a9ca-4dc2-9187-e2cc4d9abe7f/v2.0/.well-known/openid-configuration
         scopes: openid+profile
-      time_server: 2.pool.ntp.org
+      time_server: 10.5.11.5
       time_zone: Europe/Ljubljana
       smtp:
         server: mail_a.example.com
@@ -71,7 +71,7 @@
         # certificate: plain_text_from_x509
         config_url: https://login.microsoftonline.com/76d4c62a-a9ca-4dc2-9187-e2cc4d9abe7f/v2.0/.well-known/openid-configuration
         scopes: openid+profile
-      time_server: 3.pool.ntp.org
+      time_server: 10.5.11.7
       time_zone: Europe/Zagreb
       smtp:
         server: mail_b.example.com
