--- a/tests/integration/targets/time_server/tasks/02_time_server.yml
+++ b/tests/integration/targets/time_server/tasks/02_time_server.yml
@@ -5,8 +5,10 @@
     SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout * 10 }}"
   vars:
-    time_server_a: 2.pool.ntp.org
-    time_server_b: 3.pool.ntp.org
+    # We need 2 NTP servers.
+    # Set them up per ci-infra/ntp-chrony/Readme.md.
+    time_server_a: 10.5.11.5
+    time_server_b: 10.5.11.7
     actual_uuid: timesource_guid
 
   block:
