--- a/roles/version_update_single_node/tasks/main.yml
+++ b/roles/version_update_single_node/tasks/main.yml
@@ -87,4 +87,7 @@
       when: update_result.record.uuid != scale_computing_hypercore_desired_version
   when:
     - cluster_info.record.icos_version != scale_computing_hypercore_desired_version
-    - update_status_before_update.record.update_status == "COMPLETED" or update_status_before_update.record.update_status != "IN PROGRESS"
+    - >-
+      update_status_before_update.record == None or
+      update_status_before_update.record.update_status == "COMPLETED" or
+      update_status_before_update.record.update_status != "IN PROGRESS"
