Fix roles check_local_time, version_update_single_node (#197)
Use ansible_interpreter_python to run check_local_time.py

Failed job
https://github.com/ScaleComputing/HyperCoreAnsibleCollection/actions/runs/4625947983/jobs/8182193452#step:9:53

Fix case when cluster was never upgraded before.

In integ test replaced ansible_date_time.tz with https://ipapi.co/timezone.

Fix space in jinja2 (sanity hint).

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>
Co-authored-by: Polona Mihalič <polona.mihalic@xlab.si>

--- a/roles/check_local_time/tasks/main.yml
+++ b/roles/check_local_time/tasks/main.yml
@@ -1,23 +1,7 @@
 ---
-- name: Is executable python3
-  ansible.builtin.command: which python3
-  register: executable
-  changed_when: false  # to avoid ansible-lint error "no-changed-when: Commands should not change things if nothing needs doing."
-  ignore_errors: true  # if there is no python3, the shell will fail
-
-- name: Is executable python
-  ansible.builtin.command: which python
-  register: executable_python
-  changed_when: false  # to avoid ansible-lint error "no-changed-when: Commands should not change things if nothing needs doing."
-  ignore_errors: true  # if there is no python, the shell will fail
-
-- name: If not python3, then set executable to python
-  ansible.builtin.set_fact: executable="{{ executable_python }}"
-  when: not executable.stdout_lines
-
 - name: Check if local time is in time interval (run check_local_time.py)
   ansible.builtin.script:
-    executable: "{{ executable.stdout_lines[0] }}"
+    executable: "{{ ansible_python_interpreter }}"
     cmd: check_local_time.py "{{ time_zone }}" "{{ time_interval }}"
   register: local_time_output
 
